--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
 		"svelte": "^3.54.0",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-lightbox": "^1.1.0"
+	}
 }
